--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               type="text"
               name="stop"
               id="stop"
-              placeholder="Oct 17 18, 10:00 PM"
+              placeholder="Oct 17, 10:00 PM"
             />
           </div>
           <button class="btn">
